[gd_scene load_steps=8 format=3 uid="uid://c8wexbk4dkaar"]

[ext_resource type="Script" path="res://Scripts/Enemies/Grunt.gd" id="1_47bm5"]
[ext_resource type="AudioStream" uid="uid://cf0f1q1kot4w7" path="res://Audio/Scitter.mp3" id="2_njg1n"]
[ext_resource type="AudioStream" uid="uid://c5775e6xbrwci" path="res://Audio/breeze-of-blood-122253.mp3" id="3_xxh4d"]

[sub_resource type="Gradient" id="Gradient_5j3a0"]
colors = PackedColorArray(0, 0.859486, 0.987297, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8cn8p"]
gradient = SubResource("Gradient_5j3a0")
width = 16
height = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_fyovy"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g6dpj"]
radius = 12.0

[node name="Grunt" type="CharacterBody2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource("1_47bm5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_8cn8p")

[node name="LineofSight" type="RayCast2D" parent="."]
target_position = Vector2(400, 0)
collision_mask = 3
collide_with_areas = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fyovy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="AttackRadius" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g6dpj")

[node name="Sound_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_njg1n")

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xxh4d")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
